# Networking_SwissArmyKnife

./: .gitignore  README.md  build_meson.sh  meson.build
Tests/Application/: network_interface_test.c
include/Network_interface/: network_interface.h
source/Network_interface/: README.md  __meson.build__  build_meson.ps1  build_meson.sh  meson.build  network_interface.c  network_interface.h  network_interface_linux.c  network_interface_linux_core.c  network_interface_linux_dynamic.c  network_interface_linux_info.c  network_interface_linux_static.c  network_interface_linux_statistics.c  network_interface_testApp.c  network_interface_utils.c  network_interface_windows.c
source/Socket_manager/: README.md  build_linux.sh  build_windows.sh  cross_file.txt  meson.build  socket_manager.h  socket_manager_linux.c  socket_manager_testApp.c  socket_manager_windows.c
